--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ font-size: 30px;
     font-size: 30px;
 }
 
-@media screen and (min-width: 300px)  and (max-width:1023px){
+@media screen and (min-width: 100%)  and (max-width:100%){
     #middle-div{
         display: flex;
         flex-direction: column;
@@ -100,7 +100,7 @@ font-size: 30px;
     
   }
 
-  @media screen and (min-width: 1024px)  and (max-width:1400px){
+  @media screen and (min-width: 100%)  and (max-width:100%){
     #middle-div{
         display: flex;
         
@@ -110,7 +110,7 @@ font-size: 30px;
 
 
 
-  @media screen and (min-width: 300px)  and (max-width:768px){
+  @media screen and (min-width: 100%)  and (max-width:100%){
     .exploreButton{
         width: 20ww;
         /* height: 2vw; */
@@ -123,7 +123,7 @@ font-size: 30px;
   
 
 
-@media screen and (min-width: 300px)  and (max-width:768px){
+@media screen and (min-width: 100%)  and (max-width:100%){
     #middle-div-two{
         display: grid;
         grid-template-columns: auto ;
@@ -139,7 +139,7 @@ font-size: 30px;
 
 
 
-@media screen and (min-width: 300px)  and (max-width:768px){
+@media screen and (min-width: 100%)  and (max-width:100%){
     .grid-items, body{
         background-size: cover;
         background-repeat: repeat-y;
@@ -151,7 +151,7 @@ font-size: 30px;
 
   
 
-@media screen and (min-width: 200px)  and (max-width:1193px){
+@media screen and (min-width: 100%)  and (max-width:100%){
     ul{
 display: flex;
 flex-direction: column;
